be/src/exec/partitioned-hash-join-node.cc
@@ -766,6 +766,7 @@ Status PartitionedHashJoinNode::GetNext(RuntimeState* state, RowBatch* out_batch
         *eos = true;
         break;
       }
+      if (out_batch->AtCapacity()) break;
     }
 
     if (join_op_ == TJoinOp::NULL_AWARE_LEFT_ANTI_JOIN) {
@@ -777,21 +778,21 @@ Status PartitionedHashJoinNode::GetNext(RuntimeState* state, RowBatch* out_batch
 
       if (null_probe_output_idx_ >= 0) {
         RETURN_IF_ERROR(OutputNullAwareNullProbe(state, out_batch));
-        if (out_batch->AtCapacity()) return Status::OK;
+        if (out_batch->AtCapacity()) break;
         continue;
       }
 
       if (nulls_build_batch_.get() != NULL) {
         RETURN_IF_ERROR(OutputNullAwareProbeRows(state, out_batch));
-        if (out_batch->AtCapacity()) return Status::OK;
+        if (out_batch->AtCapacity()) break;
         continue;
       }
     }
 
     // Finish up the current batch.
     {
-      // Putting SCOPED_TIMER in ProcessProbeBatch() causes weird exception handling IR in
-      // the xcompiled function, so call it here instead.
+      // Putting SCOPED_TIMER in ProcessProbeBatch() causes weird exception handling IR
+      // in the xcompiled function, so call it here instead.
       int rows_added = 0;
       SCOPED_TIMER(probe_timer_);
       if (process_probe_batch_fn_ == NULL || ht_ctx_->level() != 0) {
@@ -907,6 +908,7 @@ void PartitionedHashJoinNode::OutputUnmatchedBuild(RowBatch* out_batch) {
           output_build_partitions_.front()->hash_tbl()->FirstUnmatched(ht_ctx_.get());
     }
   }
+
   DCHECK_LE(num_rows_added, max_rows);
   out_batch->CommitRows(num_rows_added);
   num_rows_returned_ += num_rows_added;
